# Nanonis-STM-Analysis-Skill

./: CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v3.0.md  SKILL.md  pyproject.toml
assets/: approval-gate-template.html
docs/: analystm_replacement_coverage.md
pysidam_agent_core/: __init__.py  approval.py  bragg_phase.py  gap_fitting.py  gap_priority.py  io.py  models.py  phase_lockin.py
references/: approval-gates.md  data-contracts.md  fitting-recipes.md  format-io-matrix.md  nanonis-3ds-ingest.md  pysidam-capability-index.json  pysidam-capability-map.md  pysidam-tool-map.md  quality-checks.md  reporting.md  runtime-bootstrap.md  workflow.md
runtime/: constraints.txt  requirements-ai.txt  requirements-core.txt
scripts/: approval_gate.py  bootstrap_runtime.py  probe_runtime.py  resolve_runtime.py  sync_installed_skill.py  validate_package.py
tests/: test_analystm_display_surfaces.py  test_analystm_export.py  test_analystm_grid_deconvolution.py  test_analystm_histogram_crop.py  test_analystm_intensity.py  test_analystm_multipeak.py  test_analystm_path_viz.py  test_analystm_phase_lockin_public_api.py  test_analystm_public_backend.py  test_analystm_publication.py  test_analystm_qpi.py  test_analystm_qpi1d_filter.py  test_analystm_real_surfaces.py  test_analystm_replacement_backend.py  test_analystm_sjtm.py  test_analystm_spstm.py  (+11 more)
(+57 files in other folders)
