[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analystm"
version = "3.0"
description = "Headless STM/SJTM analysis backend for agent workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wangq1h" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-image>=0.21",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
nanonis = ["nanonispy"]
ibw = ["igorwriter"]
ai = ["AI4STM"]
test = ["pytest>=8"]
all = ["nanonispy", "igorwriter", "pytest>=8"]

[project.scripts]
analystm = "analystm.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
